# shopping-gtk

./: .buildconfig  meson.build  org.gnome.Shoppinglist.json
data/: meson.build  org.gnome.Shoppinglist.appdata.xml.in  org.gnome.Shoppinglist.desktop.in  org.gnome.Shoppinglist.gschema.xml
po/: POTFILES  meson.build
src/: actions.py  category_editor.py  category_editor.ui  category_editor_item.py  category_editor_item.ui  category_list_box.py  category_list_box.ui  constants.py  db.py  dialog_input.py  dialog_input.ui  input.py  input.ui  list.py  list.ui  list.ui~  list_item.py  list_item.ui  list_item.ui~  main.py  meson.build  notes.md  shoppinglist.gresource.xml  shoppinglist.in  window.py  window.ui  window.ui~
